--- a/pom.xml
+++ b/pom.xml
@@ -350,7 +350,7 @@
 					<links>
 						<link>https://javaee.github.io/javaee-spec/javadocs/</link>
 					</links>
-                                        <doclint>none</doclint>
+                                        <doclint>all,-reference</doclint>
 				</configuration>
 				<executions>
 					<execution>
