--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.glassfish.version>6.0.0-M1</test.glassfish.version>
+		<test.glassfish.version>6.0.0-RC2</test.glassfish.version>
 		<test.tomcat.version>10.0.0-M8</test.tomcat.version>
 		<test.wildfly.version>20.0.1.Final</test.wildfly.version> <!-- TODO: JEE9 compatible version -->
 		<test.tomee.version>9.0.0-M2</test.tomee.version> <!-- TODO: JEE9 compatible version which supports jakarta.ee XML namespace (M2 unfortunately doesn't support it yet, it still throws jakarta.xml.bind.UnmarshalException: unexpected element (uri:"https://jakarta.ee/xml/ns/jakartaee", local:"web-fragment")) -->
@@ -92,25 +92,25 @@
 		<dependency>
 			<groupId>jakarta.faces</groupId>
 			<artifactId>jakarta.faces-api</artifactId>
-			<version>3.0.0-RC1</version>
+			<version>3.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.el</groupId>
 			<artifactId>jakarta.el-api</artifactId>
-			<version>4.0.0.M1</version>
+			<version>4.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
-			<version>5.0.0-M2</version>
+			<version>5.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.enterprise</groupId>
 			<artifactId>jakarta.enterprise.cdi-api</artifactId>
-			<version>3.0.0-M3</version>
+			<version>3.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -132,7 +132,7 @@
 		<dependency>
 			<groupId>jakarta.platform</groupId>
 			<artifactId>jakarta.jakartaee-web-api</artifactId>
-			<version>9.0.0-RC2</version>
+			<version>9.0.0-RC3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -481,52 +481,6 @@
 											<type>zip</type>
 										</artifactItem>
 									</artifactItems>
-								</configuration>
-							</execution>
-							<execution>
-								<id>upgrade-jsf-in-glassfish</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>copy</goal>
-								</goals>
-								<configuration>
-									<artifactItems>
-										<artifactItem>
-											<groupId>org.glassfish</groupId>
-											<artifactId>jakarta.faces</artifactId>
-											<version>3.0.0-RC3</version>
-											<type>jar</type>
-											<outputDirectory>${project.build.directory}/glassfish6/glassfish/modules</outputDirectory>
-											<destFileName>jakarta.faces.jar</destFileName>
-											<overWrite>true</overWrite>
-										</artifactItem>
-									</artifactItems>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.1.0</version>
-						<executions>
-							<execution>
-								<id>update-internal-api</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<resources>
-										<resource>
-											<directory>${project.basedir}/src/test/resources/glassfish</directory>
-											<includes>
-												<include>internal-api.jar</include> <!-- Patched version with correct OSGI version in MANIFEST.MF, else it will fail when executing with a Java Agent. -->
-											</includes>
-										</resource>
-									</resources>
-									<outputDirectory>${project.build.directory}/glassfish6/glassfish/modules</outputDirectory>
-									<overwrite>true</overwrite>
 								</configuration>
 							</execution>
 						</executions>
