--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 
 		<!-- Test server versions. -->
 		<test.glassfish.version>6.0.0-RC2</test.glassfish.version>
-		<test.tomcat.version>10.0.0-M8</test.tomcat.version>
+		<test.tomcat.version>10.0.0-M10</test.tomcat.version>
 		<test.wildfly.version>20.0.1.Final</test.wildfly.version> <!-- TODO: JEE9 compatible version -->
 		<test.tomee.version>9.0.0-M2</test.tomee.version> <!-- TODO: JEE9 compatible version which supports jakarta.ee XML namespace (M2 unfortunately doesn't support it yet, it still throws jakarta.xml.bind.UnmarshalException: unexpected element (uri:"https://jakarta.ee/xml/ns/jakartaee", local:"web-fragment")) -->
 		<test.payara.version>5.2020.4</test.payara.version> <!-- TODO: JEE9 compatible version -->
@@ -505,7 +505,7 @@
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
 					<artifactId>arquillian-tomcat-managed-8</artifactId>
-					<version>1.1.0.Final</version>
+					<version>1.2.0.Alpha1</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -538,7 +538,7 @@
 										<artifactItem>
 											<groupId>org.glassfish</groupId>
 											<artifactId>jakarta.faces</artifactId>
-											<version>3.0.0-RC3</version>
+											<version>3.0.0</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomcat-${test.tomcat.version}/lib</outputDirectory>
 										</artifactItem>
@@ -556,7 +556,7 @@
 										<artifactItem>
 											<groupId>org.jboss.weld.servlet</groupId>
 											<artifactId>weld-servlet-shaded</artifactId>
-											<version>4.0.0.Beta1</version>
+											<version>4.0.0.Beta5</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomcat-${test.tomcat.version}/lib</outputDirectory>
 										</artifactItem>
@@ -574,7 +574,7 @@
 										<artifactItem>
 											<groupId>org.glassfish</groupId>
 											<artifactId>jakarta.el</artifactId>
-											<version>4.0.0-RC2</version>
+											<version>4.0.0</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomcat-${test.tomcat.version}/lib</outputDirectory>
 										</artifactItem>
@@ -624,14 +624,14 @@
 										<artifactItem>
 											<groupId>jakarta.json</groupId>
 											<artifactId>jakarta.json-api</artifactId>
-											<version>2.0.0-RC3</version>
+											<version>2.0.0</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomcat-${test.tomcat.version}/lib</outputDirectory>
 										</artifactItem>
 										<artifactItem>
 											<groupId>org.glassfish</groupId>
 											<artifactId>jakarta.json</artifactId>
-											<version>2.0.0-RC3</version>
+											<version>2.0.0</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomcat-${test.tomcat.version}/lib</outputDirectory>
 										</artifactItem>
