--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 		<test.tomcat.version>10.0.0-M10</test.tomcat.version>
 		<test.tomcat.mojarra.version>3.0.0</test.tomcat.mojarra.version>
 		<test.tomcat.myfaces.version>3.0.0-RC1</test.tomcat.myfaces.version> <!-- TODO: JEE9 compatible version (RC1 unfortunately throws IllegalStateException "No Factories configured for this Application" and asks for startup listener to be manually registered)  -->
-		<test.wildfly.version>22.0.0.Alpha1</test.wildfly.version> <!-- TODO: JEE9 compatible version (Alpha1 unfortunately throws NoClassDefFoundError on jakarta.* API) -->
+		<test.wildfly.version>22.0.0.Alpha1</test.wildfly.version>
 		<test.tomee.version>9.0.0-M3</test.tomee.version> <!-- TODO: JEE9 compatible version which supports jakarta.ee XML namespace (M3 unfortunately doesn't support it yet, it still throws jakarta.xml.bind.UnmarshalException: unexpected element (uri:"https://jakarta.ee/xml/ns/jakartaee", local:"web-fragment")) -->
 		<test.payara.version>5.2020.4</test.payara.version> <!-- TODO: JEE9 compatible version -->
 	</properties>
@@ -901,7 +901,7 @@
 									<artifactItems>
 										<artifactItem>
 											<groupId>org.wildfly</groupId>
-											<artifactId>wildfly-dist</artifactId>
+											<artifactId>wildfly-preview-dist</artifactId>
 											<version>${test.wildfly.version}</version>
 											<type>zip</type>
 										</artifactItem>
@@ -915,7 +915,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
 							<systemPropertyVariables>
-								<jboss.home>${project.build.directory}/wildfly-${test.wildfly.version}</jboss.home>
+								<jboss.home>${project.build.directory}/wildfly-preview-${test.wildfly.version}</jboss.home>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 							</systemPropertyVariables>
 						</configuration>
