--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,11 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.glassfish.version>6.0.0-RC2</test.glassfish.version>
-		<test.tomcat.version>10.0.0-M10</test.tomcat.version>
+		<test.glassfish.version>6.0.0-RC3</test.glassfish.version>
+		<test.tomcat.version>10.0.0</test.tomcat.version>
 		<test.tomcat.mojarra.version>3.0.0</test.tomcat.mojarra.version>
 		<test.tomcat.myfaces.version>3.0.0-RC1</test.tomcat.myfaces.version> <!-- TODO: JEE9 compatible version (RC1 unfortunately throws IllegalStateException "No Factories configured for this Application" and asks for startup listener to be manually registered)  -->
-		<test.wildfly.version>22.0.0.Alpha1</test.wildfly.version>
+		<test.wildfly.version>22.0.0.Beta1</test.wildfly.version>
 		<test.tomee.version>9.0.0-M3</test.tomee.version> <!-- TODO: JEE9 compatible version which supports jakarta.ee XML namespace (M3 unfortunately doesn't support it yet, it still throws jakarta.xml.bind.UnmarshalException: unexpected element (uri:"https://jakarta.ee/xml/ns/jakartaee", local:"web-fragment")) -->
 		<test.payara.version>5.2020.4</test.payara.version> <!-- TODO: JEE9 compatible version -->
 	</properties>
